<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".task.AddTask">

    <Button
        android:id="@+id/updateSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickSaveButt"
        android:layout_marginTop="40dp"
        android:text="@string/button_text_update"
        app:layout_constraintEnd_toEndOf="@+id/updateDateText"
        app:layout_constraintStart_toStartOf="@+id/updateDateText"
        app:layout_constraintTop_toBottomOf="@+id/updateDateText" />

    <EditText
        android:id="@+id/updateNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="11"
        android:hint="@string/task_name_hint"
        android:inputType="textPersonName"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateDescText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="11"
        android:hint="@string/task_desc_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateNameText" />

    <EditText
        android:id="@+id/updateDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="11"
        android:hint="@string/task_date_hint"
        android:inputType="date"
        android:layout_marginTop="50dp"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateTimeText" />

    <EditText
        android:id="@+id/updateTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="11"
        android:maxLength="5"
        android:hint="@string/task_time_hint"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateDescText" />

</androidx.constraintlayout.widget.ConstraintLayout>